--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -33,9 +33,9 @@ jobs:
           python-version: ${{ matrix.python-version }}
 
       - name: Install dependencies
-        run: python -m pip install pytest .
-           | python -m pip install requests .
-           | python -m pip install bs4 .
+        run: python -m pip install pytest 
+           | python -m pip install requests 
+           | python -m pip install bs4 
 
       - name: Run tests
         run: pytest
