--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -29,9 +29,15 @@ jobs:
           python-version: ${{ matrix.python-version }}
 
       - name: Install dependencies
-        run: python -m pip install pytest 
-           | python -m pip install requests 
-           | python -m pip install bs4
+        run: |
+            python -m pip install --upgrade pip setuptools wheel build
+            pip install 
+            python -m pip install pytest 
+            python -m pip install requests 
+            python -m pip install bs4
+
+      - name: Build the distribution
+        run: python setup.py sdist bdist_wheel
 
       - name: Run tests
         run: pytest
