--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -31,7 +31,7 @@ jobs:
       - name: Install dependencies
         run: |
             python -m pip install --upgrade pip setuptools wheel build
-            pip install 
+            pip install .
             python -m pip install pytest 
             python -m pip install requests 
             python -m pip install bs4
